simple load data

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-transformers>=4.32.0,<4.38.0
+datasets
+evaluate
+transformers
 accelerate
-tiktoken
-einops
-transformers_stream_generator==0.0.4
-scipy
