--- a/config/config.ini
+++ b/config/config.ini
@@ -3,4 +3,9 @@ path=data/raw/
 
 [moedl]
 model_name=Qwen/Qwen2.5-32B-Instruct-GPTQ-Int4
+
+[train]
 save_dir=models/
+epoch=100
+learning_rate=2e-5
+weight_decay=0.01
