--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-datasets
-evaluate
-transformers
-accelerate
+numpy==1.26.4
+tqdm==4.67.1
+torch==2.0.0
+datasets==3.2.0
+transformers==4.4.7.1
+seqeval==1.2.2
+evaluate==0.4.3
+accelerate==1.2.1
+gradio==5.9.1
